--- a/cvCSS.css
+++ b/cvCSS.css
@@ -14,7 +14,7 @@ body
 
 .guzior
 {
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLWO2FeImzV3Uj5M8rmIn_azy7q--44YVe-3qzfuUrZ_cbiyKOr8oFky5uvnCugs4sWLwH-Y6mbAVLoWFPKVdrFSyyDcyh8da2wzynbFW92W8n3e7GHujRmDMvNjbHKCCYuDFRovV7bKwP_hV04FxFU=s571-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/b45685166f3c2.png");
     background-size: contain;
     width: 100px;
     height: 100px;
@@ -134,7 +134,7 @@ body
     margin-top: 125px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLW4FBv8bkhjKXZjXTm-_OOKo37Eiz69mfVT3Qrg4cGwwhwH4HtD1xHL5lG5_oNTJPzQP3IUpt-IEUAMv5sJDh_BGhtt_6gWUyox8l6XrfecS47WcnIOh6o1cRU8cIj4JgF0Ulb_E10J_Xg5flHp2uw=w1486-h661-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/8e45571eb04bb.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
@@ -163,7 +163,7 @@ body
     margin-top: 125px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLV5WcA6IFrFLwlgTrRfYdaRbblxQ7y04CuxoUDqtzr0DJgoFHUTb4aDhwX7Ft4HgysFXR1QHddWDz_ieDf-eIgns5c5GgvNWQ61nZVeEVQ0xW1PkMxcOFHJFHbq6rlaSf4Xa52forbixexJQl2Y6V4=w973-h522-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/ff13112200b4d.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
@@ -180,7 +180,7 @@ body
     margin-top: 125px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLWU4EdJPRNp8XvRXPkKh0nxgNXC4qAFQVDTd4p3TEavkWny02GaRp-coH4nXZuwuq3X0RtboQ3fxU7OnL5Do57FBG4ePsWEk9uDtk8WDN7YSTbfxFlLLJ5XPDAEX3cN5OoNEI0aGCaqKuDwj3A0utE=w792-h415-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/be73c48b6bc3e.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
@@ -210,7 +210,7 @@ body
     margin-top: 575px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLWqDSXnZ6VWOKSar69DvE3B37hZm4eLgFHTa0gJpdiQCQu33LILxpl9ySpDMUTE85PK7ZN-_jBkzFQhQUdByJkQLSdyhSceZTO4ijX9x0ClvrgJNJRaLXTPeeBZeet5U9IEkQsjoKTfjTD2aVjHAkk=w455-h304-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/cd80c0c74f608.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
@@ -226,7 +226,7 @@ body
     margin-top: 575px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLW-OZMQDtrxXTA-9l9Id_Ad1dwstwuW2bml_VAnDYFZmV_9MD3poJ0zjOTfH8dQJDhZ1acD-jT7e0iCLv0h2vAx-8X6fiUxvg4t2184TeemWyz9bkDi7nDpvdgJpGfMIkaEpVJ7Kp7QFwkdbMDlFII=w586-h729-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/bb59f78e0c956.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
@@ -242,7 +242,7 @@ body
     margin-top: 575px;
     position: absolute;
     left: 120px;
-    background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLUXJe1K-TyCUlhmTtELEmc5TgnrlqzCINEUl5ZEQtTS_SzTtFNM-l7C0J3SqhvRNrWxh_QnVHZwGLkDDr3Rff-qaytZ4ZqsGL2KcGd_wmpDpPYqmCMVa5Leka4tMZAZG9qWDwT6nBWRDIXj1PF8Re8=w989-h878-no?authuser=0");
+    background-image: url("https://zapodaj.net/images/c7c4a8c95cd13.png");
     background-size: 100%;
     border-style: solid;
     border-width: 3px;
